// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default array 1`] = `
"/**
 * The value
 *
 * @default [ ]
 */
"
`;

exports[`default object 1`] = `
"/**
 * The value
 *
 * @default { }
 */
"
`;

exports[`default string with description 1`] = `
"/**
 * The value
 *
 * @default 'type' name description
 */
"
`;
